# crew_mcp_project

./: .gitignore  agents.yaml  create_all_dbs.sh  import requests.py  main.py  mcp_server_base.py  ollama_api.py  pyproject.toml  run_project.py  task.yaml  terminal_interface.py
agents/: backup_restore_agent1.py  backup_restore_agent2.py  mcp_agent.py  requirement.txt
agents/postgres/: backup_restore_agent1.py  backup_restore_base.py
backups/agent1/: db1_20251001214212.backup  db1_20251002041719.backup  db1_20251002063802.backup  db1_20251002064747.backup  db1_20251003044127.backup  db1_20251003044147.backup  db2_20251002033939.backup  db2_20251003044132.backup  db2_20251005042724.backup
backups/agent1/db1_backup_20250915_170138/: backup.txt
backups/agent1/db1_stanza_backup_20250915_161659/: backup.txt
backups/agent2/: db3_20251002065053.backup  db3_20251003040445.backup  db3_20251003044148.backup  db3_20251003085323.backup  db4_20251004045810.backup
backups/agent2/db2_backup_20250915_170138/: backup.txt
backups/agent2/db2_stanza_backup_20250915_161659/: backup.txt
backups/archive/pg1_17/: archive.info.copy
backups/archive/pg2_17/: archive.info
backups/backup/pg1_17/: backup.info  latest
backups/backup/pg2_17/: backup.info  latest
config/: server1.env  server2.env  settings.py
ollama_server/: ollama_server.py
pgbackrest_repo/archive/pg1_17/: archive.info
pgbackrest_repo/archive/pg2_17/: archive.info.copy
scripts/: auto_backup.sh
servers/server1/: mcp_server1.py
servers/server2/: mcp_server2.py
(+25 files in other folders)
